Fix for summary marker on iOS

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -300,7 +300,7 @@ summary {
     cursor: pointer;
 }
 
-summary::marker{
+summary::marker, summary::-webkit-details-marker {
     display:none;
 }
 
